--- a/game/eparkour.html
+++ b/game/eparkour.html
@@ -5,14 +5,14 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>eparkour: Play Now for Free on FAF Games</title>
+        <title>eparkour: Play eparkour at 76 Unblocked Games</title>
     <meta name="description" content="eParkour is a thrilling platform game where you jump, dodge, and race through challenging levels. Can you conquer every obstacle and reach the finish line?">
     <meta name="keywords" content="eParkour, parkour game, platform game, jumping game, obstacle course, skill game, 3D parkour, action game, adventure game, puzzle platformer, speedrun game, parkour challenge, reflex game, free running, extreme parkour, gaming challenge, fun platformer, level-based game, online parkour, fast-paced game">
 
         <meta name="news_keywords" content="">
-        <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/eparkour.html" />
-	<meta name="publisher" content="FAF Games Team">
+        <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/eparkour.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -305,7 +305,7 @@
         <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -766,7 +766,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -812,7 +812,7 @@
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2024 76 Unblocked Games - All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
@@ -844,7 +844,7 @@
          <script>
             function loadMainGame()
             {
-                  var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://eparkour.io/?gd_sdk_referrer_url=https://faf-games.github.io/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+                  var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://eparkour.io/?gd_sdk_referrer_url=https://76-unblockedgames.github.io/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
                   document.getElementById("loadgame").innerHTML = html;
                   document.getElementById('loadgame').scrollIntoView();
             }
