--- a/game/gunspin.html
+++ b/game/gunspin.html
@@ -5,13 +5,13 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Gunspin Unblocked: Play Now for Free on FAF Games </title>
+        <title>Gunspin Unblocked: Play Now at 76 Unblocked Games </title>
         <meta name="description" content="Play GunSpin, a fun and free arcade shooter game. Master the art of shooting to propel yourself further. Enjoy GunSpin unblocked online anytime!">
         <meta name="keywords" content="GunSpin game, Gunspin, gunspin Unblocked Games Premium, play GunSpin online, GunSpin free game, GunSpin unblocked, GunSpin shooter, GunSpin arcade, GunSpin game download, online GunSpin game, GunSpin gameplay, GunSpin tips">
 
-        <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/gunspin.html" />
-	<meta name="publisher" content="FAF Games Team">
+        <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/gunspin.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="512x512" href="../assets/img/logo/feb-icon.png">
@@ -343,7 +343,7 @@
         <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -459,7 +459,7 @@
                   <div class="contest-details__thumb-slider">
                     <div class="game-iframe-container" id="loadgame">
                       <div class="talpa-splash-container" style="background: var(--color2);"><div class="talpa-splash-top"><div>
-                           <div style="--thumb:url(https://faf-games.github.io/assets/img/gunspin/logo.png);" alt="Stylish Crop Top Trends"></div>
+                           <div style="--thumb:url(https://76-unblockedgames.github.io/assets/img/gunspin/logo.png);" alt="Stylish Crop Top Trends"></div>
                            <button id="talpa-splash-button" class="SP-splash-button" onclick="loadMainGame()" style="display: block;">PLAY NOW</button>
                            <div class="talpa-loader" style="display: none;">Loading...</div></div></div><div class="talpa-splash-bottom"></div>
                       </div>
@@ -872,7 +872,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -918,7 +918,7 @@
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2024 76 Unblocked Games - All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
