--- a/game/highway-rider-extreme.html
+++ b/game/highway-rider-extreme.html
@@ -4,14 +4,14 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Highway Rider Extreme Unblocked: Play Now for Free on FAF Games</title>
+        <title>Highway Rider Extreme Unblocked: Play Now for Free on 76 Unblocked Games</title>
         <meta name="description" content="Play Highway Rider Extreme – the ultimate unblocked motorcycle game where speed and thrill meet on the open highway. Free to play, no downloads!">
         <meta name="title" content="Highway Rider Extreme">
 	<meta name="robots" content="index, follow">
-	<meta name="publisher" content="FAF Games Team">
-	<meta name="author" content="FAF Games Team">
+	<meta name="publisher" content="76 Unblocked Games">
+	<meta name="author" content="76 Unblocked Games">
        	<meta name="keywords" content="Highway Rider Extreme, play Highway Rider Extreme, unblocked motorcycle games, free motorcycle games, motorcycle games online, unblocked games, Highway Rider Extreme unblocked, online motorcycle racing, no download games, play unblocked games, motorcycle driving games, free bike games, racing games online, highway bike games, free online games for school">
-        <link rel="canonical" href="/game/highway-rider-extreme.html" />
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/highway-rider-extreme.html" />
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
@@ -301,7 +301,7 @@
          <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -647,7 +647,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -693,7 +693,7 @@
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2024 76 Unblocked Games - All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
