--- a/game/highway-rider-extreme.html
+++ b/game/highway-rider-extreme.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Highway Rider Extreme Unblocked: Play Now for Free on 76 Unblocked Games</title>
+        <title>Highway Rider Extreme Unblocked: Play Now at 76 Unblocked Games</title>
         <meta name="description" content="Play Highway Rider Extreme – the ultimate unblocked motorcycle game where speed and thrill meet on the open highway. Free to play, no downloads!">
         <meta name="title" content="Highway Rider Extreme">
 	<meta name="robots" content="index, follow">
