--- a/game/idle-startup-tycoon.html
+++ b/game/idle-startup-tycoon.html
@@ -5,13 +5,8 @@
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
                 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-                <title>Idle Startup Tycoon Unblocked: Play Now for Free on FAF Games</title>
-                <meta name="description" content="Play Idle Startup Tycoon game on FAF Games. 
-                Play Idle Startup Tycoon, Idle Startup Tycoon Unblocked on FAF Games. 
-                ✓ Free online game 
-                ✓ Fullscreen mode 
-                ✓ No registration required 
-                ✓ No Download. Have fun playing!">
+                <title>Idle Startup Tycoon Unblocked: Play Now at 76 Unblocked Games</title>
+                <meta name="description" content="Enjoy Idle Startup Tycoon Unblocked and build your business empire. Hire managers, grow your company, and become a startup billionaire online.">
                 <meta name="keywords" content="Idle Startup Tycoon Game, Idle Games, IdleGames, Idle Games Pc, IdleGamesPc, 
                Idle Games Online, 
                IdleGamesOnline, Idle Games Free, IdleGamesFree">
@@ -24,9 +19,9 @@
                Idle Startup Tycoon steam
                Idle Startup Tycoon classic
                Idle Startup Tycoon unblocked at school">
-                <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/idle-startup-tycoon.html" />
-	<meta name="publisher" content="FAF Games Team">
+                <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/idle-startup-tycoon.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
                 <!-- Favicon -->
                 <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -307,7 +302,7 @@
                <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -564,7 +559,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -610,7 +605,7 @@
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2024 76 Unblocked Games-GAMES - All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
