--- a/game/pacman-doodle.html
+++ b/game/pacman-doodle.html
@@ -5,13 +5,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Pacman Doodle Unblocked: Play Now for Free on FAF Games</title>
+    <title>Pacman Doodle Unblocked: Play Now for Free on 76 Unblocked Games</title>
    <meta name="description" content="Enjoy PacMan, the timeless classic arcade game. Play Pac-Man online, navigate the maze, avoid ghosts, and relive the retro gaming experience.">
     <meta name="keywords" content="Pac-Man online, play Pac-Man, Pacman, Pacman Unblocked, Pacman Doodle, Pacman , Google Pacman, free Pac-Man game, classic arcade games, retro maze games, Pac-Man game free, Pac-Man ghosts, play retro games, Pac-Man classic">
 
-    <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/pacman-doodle.html" />
-	<meta name="publisher" content="FAF Games Team">
+    <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="http://76-unblockedgames.github.io/game/pacman-doodle.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -338,7 +338,7 @@
   <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -608,7 +608,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -685,7 +685,7 @@
      <script>
         function loadMainGame() {
             // Load the game iframe
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://faf-games.github.io/game/pacman/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://76-unblockedgames.github.io/game/pacman/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             
             // Show the fullscreen button after loading the game
