--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -505,6 +505,28 @@
              <div class="container">
                 <div class="row">				
 
+			<section>
+    <h2>Your 1v1.lol Cheat Guide</h2>
+    <p>
+      The controls are easy to use but very powerful. Here's a quick guide to the most common setup.
+    </p>
+    <ul>
+      <li><b>WASD / Arrow Keys</b>: Move around the arena</li>
+      <li><b>Left Mouse Button</b>: Shoot</li>
+      <li><b>Right Mouse Button</b>: Build</li>
+      <li><b>Spacebar</b>: Jump</li>
+      <li><b>E</b>: Use item</li>
+      <li><b>Q</b>: Switch weapons</li>
+      <li><b>R</b>: Reload</li>
+      <li><b>C</b>: Crouch</li>
+      <li><b>Z</b>: Zoom</li>
+      <li><b>Z/X/C/V/Y</b>: Swap building platforms fast</li>
+      <li><b>1, 2, F</b>: Quick weapon switching</li>
+    </ul>
+    <p>
+Adjust your keybinds if you want to play like a pro — most top players change all their settings!
+    </p>
+  </section>
 
 	<div class="col-12">
                       <div class="site-heading">
