--- a/game/stickman-fighter-2.html
+++ b/game/stickman-fighter-2.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>Stickman Fighter 2: Play Now for Free on FAF Games</title>
+    <title>Stickman Fighter 2: Play Now at 76 Unblocked Games</title>
     <link rel="icon" href="images/icon-red.png" type="image/gif" sizes="16x16">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta name="description" content="
+    <meta name="description" content="Play Stickman Fighter 2, an exciting stickman fighting game with intense battles and powerful moves. Show your skills and defeat all enemies.">
     
     
     <meta name="keywords" content="Stickman Fighter 2 Game, Action Games, ActionGames, Action Games Pc, ActionGamesPc, 
@@ -20,9 +20,9 @@
     stickman fighter epic battle 2 mod apk
     stickman fighter epic battle unblocked
     stickman games">
-    <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/stickman-fighter-2.html" />
-	<meta name="publisher" content="FAF Games Team">
+    <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/stickman-fighter-2.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <meta name="theme-style-mode" content="1">
@@ -300,7 +300,7 @@
            <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -747,7 +747,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
