--- a/game/stickman-fighter-epic-battle.html
+++ b/game/stickman-fighter-epic-battle.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>Stickman Fighter 2: Play Now for Free on FAF Games</title>
+    <title>Stickman Fighter Epic Battle: Play Now at 76 Unblocked Games</title>
     <link rel="icon" href="images/icon-red.png" type="image/gif" sizes="16x16">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta name="description" content="
+    <meta name="description" content="Join intense battles in Stickman Fighter Epic Battle. Fight waves of enemies using powerful combos and tactics. Enjoy action-packed stickman combat now.">
     
     <meta name="title" content="Stickman Fighter 2">
     <meta name="keywords" content="Stickman Fighter 2 Game, Action Games, ActionGames, Action Games Pc, ActionGamesPc, 
@@ -20,9 +20,9 @@
     stickman fighter epic battle 2 mod apk
     stickman fighter epic battle unblocked
     stickman games">
-    <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/stickman-fighter-epic-battle.html" />
-	<meta name="publisher" content="FAF Games Team">
+    <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/stickman-fighter-epic-battle.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <meta name="theme-style-mode" content="1">
